--- a/sass/layout/restaurants/content.scss
+++ b/sass/layout/restaurants/content.scss
@@ -109,6 +109,7 @@
             font-size: larger;
             white-space: nowrap;
             overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 
@@ -120,7 +121,6 @@
         .info {
             padding-left: 10px;
             margin-top: 0;
-
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
